# feature_toggle_rs

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/src/: main.rs
api/src/handlers/: users.rs
app/: Cargo.toml
app/src/: lib.rs  use_case.rs
app/tests/: test_use_case_get_features.rs  test_use_case_search_users.rs
app/tests/fixture/: feature.rs  mod.rs  user.rs
app/tests/test_repositories/: mod.rs
cli/: Cargo.toml
cli/src/: cli.rs  controller.rs  main.rs
cli/src/cli/command/: user.rs
cli/src/controller/: dto.rs
domain/: Cargo.toml
domain/src/: email_address.rs  error.rs  feature.rs  lib.rs  repositories.rs  user.rs
domain/src/error/: error_type.rs
domain/src/feature/: feature_distribution_strategy.rs  feature_id.rs  feature_name.rs  feature_repository.rs
domain/src/user/: user_id.rs  user_name.rs  user_repository.rs
domain/src/user/user_name/: user_first_name.rs  user_last_name.rs
infra/: Cargo.toml
infra/src/: id_generator.rs  lib.rs  main.rs  repository_impls.rs
infra/src/persistence/: yaml.rs
infra/src/persistence/yaml/: feature_yaml_storage.rs  user_yaml_storage.rs
infra/src/repository_impls/: feature_repository_impl.rs  user_repository_impl.rs
infra/src/ui/: cli.rs
infra/src/ui/cli/: command.rs
infra/src/ui/cli/command/: feature.rs
interface-adapter/: Cargo.toml
interface-adapter/src/: controller.rs
interface-adapter/src/controller/: dto.rs
