[package]
edition = "2021"
name = "api"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = {path = "../app"}
domain = {path = "../domain"}
infra = {path = "../infra"}

actix-web = "4"
serde = {version = "1.0", features = ["derive"]}
