[package]
edition = "2021"
name = "cli"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
app = {path = "../app"}
domain = {path = "../domain"}
infra = {path = "../infra"}

clap = {version = "4.0.0", features = ["derive"]}
